<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/email_sign_up_fragment_root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_sky_blue"
    android:fillViewport="true"
    tools:context=".ui.authentication.EmailSignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/email_sign_up_fragment_title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_46dp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/email_sign_up_fragment_create_an_account"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/email_sign_up_fragment_subtitle_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:text="@string/email_sign_up_fragment_lets_get_to_know_you"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_title_text_view" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_first_name_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_46dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/all_first_name"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_subtitle_text_view">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_first_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_last_name_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/all_last_name"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_first_name_edit_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_last_name_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="text"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_phone_number_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/phone_number"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_last_name_edit_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_phone_number_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray"
                app:backgroundTint="@color/deep_sky_blue" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_account_category_text_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:endIconDrawable="@drawable/account_category_arrow_down"
            app:endIconTint="@color/gray"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_phone_number_edit_text_layout">

            <AutoCompleteTextView
                android:id="@+id/email_sign_up_fragment_account_category_text_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="none"
                android:paddingBottom="@dimen/margin_18dp"
                android:text="@string/email_sign_up_fragment_choose_account_category"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_email_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/all_email_address"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_account_category_text_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_email_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="textEmailAddress"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/all_password"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_email_edit_text_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/medium_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_sign_up_fragment_confirm_password_edit_text_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_9dp"
            android:fontFamily="@font/poppins"
            android:hint="@string/all_confirm_password"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/text_indicator_gray"
            app:errorEnabled="true"
            app:hintTextColor="@color/gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_password_edit_text_layout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/medium_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_sign_up_fragment_confirm_password_edit_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:backgroundTint="@color/deep_sky_blue"
                android:inputType="textPassword"
                android:textColor="@color/gray"
                android:textCursorDrawable="@color/gray" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/email_sign_up_fragment_signup_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_48dp"
            android:fontFamily="@font/poppins_bold"
            android:paddingVertical="@dimen/padding_10dp"
            android:text="@string/all_signup"
            android:textAllCaps="false"
            android:textColor="@color/deep_sky_blue"
            android:textSize="@dimen/text_size_16sp"
            app:backgroundTint="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_confirm_password_edit_text_layout" />

        <TextView
            android:id="@+id/email_sign_up_fragment_have_account_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_76dp"
            android:fontFamily="@font/poppins"
            android:text="@string/all_have_an_account"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/email_sign_up_fragment_signup_button"
            app:layout_constraintHorizontal_bias="0.45"
            app:layout_constraintStart_toStartOf="@+id/email_sign_up_fragment_signup_button"
            app:layout_constraintTop_toTopOf="@+id/email_sign_up_fragment_login_text_view"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/email_sign_up_fragment_login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_18dp"
            android:layout_marginTop="@dimen/margin_18dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/all_login"
            android:textColor="@color/white"
            app:layout_constraintStart_toEndOf="@+id/email_sign_up_fragment_have_account_text_view"
            app:layout_constraintTop_toBottomOf="@+id/email_sign_up_fragment_signup_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>