...
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right"
            app:popUpTo="@id/landing_screen_fragment" />
        <action
            android:id="@+id/action_landing_screen_fragment_to_login_fragment"
            app:destination="@id/login_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
...
        android:id="@+id/email_sign_up_fragment"
        android:name="com.decagonhq.clads.ui.authentication.EmailSignUpFragment"
        android:label="fragment_email_sign_up"
        tools:layout="@layout/email_sign_up_fragment">
        <action
            android:id="@+id/action_emailSignUpFragment_to_emailConfirmationFragment"
            app:destination="@id/email_confirmation_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_email_sign_up_fragment_to_login_fragment"
...
