<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/reset_password_fragment_root_layout"
    tools:context=".ui.view.ResetPasswordFragment">

    <ImageView
        android:id="@+id/reset_password_fragment_back_arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_18dp"
        android:src="@drawable/all_arrow_back_24dp"
        android:contentDescription="@string/all_back_arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/reset_password_fragment_forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_18dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/all_forgot_password"
        android:textColor="@color/navy_blue"
        android:textSize="@dimen/text_size_20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_back_arrow_image_view" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toTopOf="@+id/reset_password_fragment_new_password_edit_text_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_forgot_password_text_view" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password_fragment_new_password_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_128dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/reset_password_fragment_new_password"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/medium_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_forgot_password_text_view">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_password_fragment_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/reset_password_fragment_confirm_new_password_edit_text_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_18dp"
        android:fontFamily="@font/poppins"
        android:hint="@string/reset_password_fragment_confirm_new_password"
        app:boxBackgroundColor="@color/white"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/medium_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_new_password_edit_text_layout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/reset_password_fragment_confirm_new_password_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

   


    <com.google.android.material.button.MaterialButton
        android:id="@+id/reset_password_fragment_btn_reset_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_18dp"
        android:layout_marginTop="@dimen/margin_48dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:paddingVertical="@dimen/padding_10dp"
        android:text="@string/all_reset_password"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_confirm_new_password_edit_text_layout" />

    <TextView
        android:id="@+id/reset_password_fragment_remember_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28dp"
        android:fontFamily="@font/poppins"
        android:text="@string/all_remember_my_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_btn_reset_password_button" />

    <TextView
        android:id="@+id/reset_password_fragment_login_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_28dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/all_login"
        android:textColor="@color/deep_sky_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.065"
        app:layout_constraintStart_toEndOf="@+id/reset_password_fragment_remember_password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/reset_password_fragment_btn_reset_password_button" />

</androidx.constraintlayout.widget.ConstraintLayout>

